src/pages/AllPictures.module.css
.cols {
  display: grid;
  /* grid-template-columns: repeat(3, 1fr); */
  grid-template-columns: repeat(auto-fit, minmax(250px, auto));
  gap: 2rem;
  color: #fff;
  background-color: white;
  padding: 2rem;
}
.likes {
  background-color: transparent;
  /* opacity: 0; */
  padding: 0;
  border: none;
}

.text {
  color: white;
  font-size: 16px;
  font-size: 1rem;
  left: 0;
  top: -1rem;
  opacity: 1;
}

.item {
  position: relative;
  background-color: black;
  border-radius: 10px;
}

.image {
  transition: 0.5s;
  width: 100%;
  display: block;
  border-radius: 10px 10px 0 0;
  transition: transform 0.5s ease;
  cursor: pointer;
}

.imgtitle {
  flex-grow: 1;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 90%;
}

.info {
  display: flex;
  background-color: black;
  color: white;
  font-size: 1rem;
  border-radius: 0 0 10px 10px;
  padding: 0.3rem 1rem;
  align-items: center;
}

.expand {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translateX(-50%) translateY(-50%);
  opacity: 0;
  cursor: pointer;
  background-color: transparent;
  padding: 0;
  border: none;
}

.filters {
  display: flex;
  position: fixed;
  left: 50%;
  top: 90%;
  transform: translateX(-50%) translateY(-50%);
}

.select {
  min-width: 9rem;
  margin-right: 0.1rem;
}

.multiselect {
  min-width: 9rem;
  max-width: 500px;
  margin-left: 0.1rem;
}

@media (min-width: 420px) {
  .expand {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translateX(-50%) translateY(-50%);
    background-color: transparent;
    padding: none;
    opacity: 0;
    border: none;
    z-index: 1;
  }

  .item:hover .image {
    opacity: 0.6;
    transform: scale(1.1);
  }

  .item:hover .expand {
    opacity: 1;
  }

  .imghoverzoom {
    overflow: hidden;
    border-radius: 10px 10px 0 0;
  }
}

